PDFBOX-3330: revert to system fonts for body text, remove mind-width for container ti fix issue on mobile

--- a/content/css/site.css
+++ b/content/css/site.css
@@ -22,27 +22,18 @@
  */
 
  /* 01 Import Fonts */
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
 
 body {
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 0;
-    font-weight: 300;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
     font-style: normal;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -moz-font-feature-settings: "liga" on;
     font-size: 16px;
     line-height: 1.5;
-    color: rgba(0,0,0,0.8);
+    color: rgba(0,0,0,0.87);
 }
 
 body > .container {
-  min-width: 750px;
-  max-width: none;
   padding-top: 20px;
 }
 
@@ -79,7 +70,7 @@ svg.pdfbox-brand-text, svg.pdfbox-brand-toolbox {
     padding: 30px 0;
     color: #e8e8e8;
     border-top: 1px solid #e5e5e5;
-    background: url("/images/footer.png") #3f3f3f;
+    background-color: rgb(38,21,15);
 }
 
 /*
@@ -88,7 +79,7 @@ svg.pdfbox-brand-text, svg.pdfbox-brand-toolbox {
 
 /* headings */
 h1, h2, h3, h4, h5 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', sans--apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
   font-weight: 400;
   color: rgba(0,0,0,0.8);
 }
